@@ -1,13 +1,16 @@
 #!/bin/sh
-UP=
+
+UP=''
 DN=${PWD:?}
 TP=${TOPDIR:?}
 
 while [ ! $TP/$UP/. -ef $DN ] ;do
 	UP=`basename $PWD`/$UP
 	cd ..
-	if [ "$PWD" = "/" ]; then echo "Lost"; exit 1; fi
+	if [ "$PWD" = "/" ]; then
+		echo "Lost"
+		exit 1
+	fi
 done
-
 echo $UP
 exit 0
